--- a/ztp-front/src/app/components/home/home.component.html
+++ b/ztp-front/src/app/components/home/home.component.html
@@ -1,1 +1,91 @@
-<div echarts [options]="options" class="demo-chart"></div>
+<div class="home-container">
+  <h1>Genetic Algorithm Configuration</h1>
+  <p>Configure the parameters for the genetic algorithm below:</p>
+
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+        <mat-form-field appearance="fill">
+            <mat-label>Mutation Name</mat-label>
+            <mat-select formControlName="mutation">
+            <mat-option *ngFor="let option of mutationOptions" [value]="option">
+                {{ option }}
+            </mat-option>
+            </mat-select>
+            <mat-error *ngIf="form.get('mutation')?.hasError('required')">Mutation name is required.</mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+            <mat-label>Crossover Name</mat-label>
+            <mat-select formControlName="crossover">
+            <mat-option *ngFor="let option of crossoverOptions" [value]="option">
+                {{ option }}
+            </mat-option>
+            </mat-select>
+            <mat-error *ngIf="form.get('crossover')?.hasError('required')">Crossover name is required.</mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+            <mat-label>Selection Name</mat-label>
+            <mat-select formControlName="selection">
+            <mat-option *ngFor="let option of selectionOptions" [value]="option">
+                {{ option }}
+            </mat-option>
+            </mat-select>
+            <mat-error *ngIf="form.get('selection')?.hasError('required')">Selection name is required.</mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+            <mat-label>Mutation Rate</mat-label>
+            <input matInput type="number" formControlName="mutation_rate" step="0.01" min="0" max="1">
+            <mat-error *ngIf="form.get('mutation_rate')?.hasError('required')">Mutation rate is required.</mat-error>
+            <mat-error *ngIf="form.get('mutation_rate')?.hasError('min')">Value must be greater than or equal to 0.</mat-error>
+            <mat-error *ngIf="form.get('mutation_rate')?.hasError('max')">Value must be less than or equal to 1.</mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+            <mat-label>Elitism Rate</mat-label>
+            <input matInput type="number" formControlName="elitism_rate" step="0.01" min="0" max="1">
+            <mat-error *ngIf="form.get('elitism_rate')?.hasError('required')">Elitism rate is required.</mat-error>
+            <mat-error *ngIf="form.get('elitism_rate')?.hasError('min')">Value must be greater than or equal to 0.</mat-error>
+            <mat-error *ngIf="form.get('elitism_rate')?.hasError('max')">Value must be less than or equal to 1.</mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+            <mat-label>Population Size</mat-label>
+            <input matInput type="number" formControlName="pop_size" min="1">
+            <mat-error *ngIf="form.get('pop_size')?.hasError('required')">Population size is required.</mat-error>
+            <mat-error *ngIf="form.get('pop_size')?.hasError('min')">Population size must be greater than 0.</mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+            <mat-label>Number of Generations</mat-label>
+            <input matInput type="number" formControlName="gens" min="1">
+            <mat-error *ngIf="form.get('gens')?.hasError('required')">Number of generations is required.</mat-error>
+            <mat-error *ngIf="form.get('gens')?.hasError('min')">Number of generations must be greater than 0.</mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+            <mat-label>X Min</mat-label>
+            <input matInput type="number" formControlName="x_min">
+            <mat-error *ngIf="form.get('x_min')?.hasError('required')">X Min is required.</mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+            <mat-label>X Max</mat-label>
+            <input matInput type="number" formControlName="x_max">
+            <mat-error *ngIf="form.get('x_max')?.hasError('required')">X Max is required.</mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+            <mat-label>Dimensions</mat-label>
+            <input matInput type="number" formControlName="dim" min="1">
+            <mat-error *ngIf="form.get('dim')?.hasError('required')">Dimensions are required.</mat-error>
+        </mat-form-field>
+
+        <div>
+            <button mat-raised-button color="primary" [disabled]="form.invalid" type="submit">Run Algorithm</button>
+        </div>
+    </form>
+
+</div>
+
+<div *ngIf="showChart" echarts [options]="options" class="demo-chart"></div>
