--- a/ztp-front/src/app/components/home/home.component.scss
+++ b/ztp-front/src/app/components/home/home.component.scss
@@ -74,6 +74,10 @@ mat-label {
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   margin: 2vh 2vw auto 2vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .demo-chart {
@@ -85,4 +89,28 @@ mat-label {
   display: flex; 
   flex-direction: row; 
   gap: 40px;
+}
+
+.result-container {
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  padding: 8px 12px;
+  border-radius: 8px;
+  max-width: 100%;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #333;
+  
+  display: flex;
+  align-items: center;
+  gap: 20px;
+
+  span {
+    font-size: 16px;
+    white-space: nowrap;
+  }
+
+  strong {
+    color: var(--text-color);
+    margin-right: 4px;
+  }
 }
